[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11.13", features = ["blocking"] }
tokio = { version = "1.23.1", features = ["full"] }
strum_macros = "0.24.3"
bytes = "1.3.0"
tempfile = "3.3.0"
zip = "0.6.3"